assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:ital,wght@0,400;0,700;1,600&display=swap');

html {
    scroll-behavior: smooth;
    
}

body {
    background-image: url("../images/factions.png");
    background-color: black;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    height: 100vh;
    font-family: "Montserrat";
    font-size: 62.5%;
    overflow-x: hidden;
}


/* Footer */
.bold-text {
    color: white;
}

#footer {
    height: 20px;
    margin-bottom: 1rem;
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
}

.img-fluid {
    max-width: 50vh;
    height: auto;
}

